# trackr_ml

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: HOW_TO_IMPORT.md  HOW_TO_RUN.md
models/: registry.json  trackr-1.0.0.evaluation.json  trackr-1.0.0.json  trackr-1.0.0.pkl
src/trackr_ml/: __init__.py  api.py  cli.py  config.py  datasets.py  domain.py  evaluation.py  extraction.py  features.py  metrics.py  model_registry.py  predictor.py  storage.py  sync.py  text.py  training.py
src/trackr_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_datasets.py  test_evaluation.py  test_extraction.py  test_model_registry.py  test_sync.py
